# workspaces-inventory

./: .dockerignore  .env.example  .env.go.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DIAGRAMS.md  DOCKER_IMAGE_FIX.md  Dockerfile  MIGRATION.md  PRODUCTION_NOTES.md  PROJECT_SUMMARY.md  README.md  README_V2.md  SECURITY.md  SPRINT-1.md  TROUBLESHOOTING.md  cleanup-docker.sh  docker-compose.full.yml  docker-compose.go.yml  docker-compose.lite.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  start-services.sh  validate-structure.sh
.github/agents/: my-agent.agent.md
ai-service/: Dockerfile  README.md  go.mod  main.go
ai-tier/: docker-compose.yml
ai-tier/phi3-service/: CMakeLists.txt  Dockerfile
ai-tier/phi3-service/src/: server.cpp
app-tier/: docker-compose.yml
app-tier/backend/: Dockerfile  alembic.ini  requirements.txt
backend/: Dockerfile  README.md  go.mod  go.sum  init-database.sh  init-db.sh  main.go  start-postgres.sh  supervisord.conf
backend/config/: config.go
backend/database/: postgres.go  redis.go
backend/handlers/: admin.go  ai.go  auth.go  aws_account.go  billing.go  cloudtrail.go  dashboard.go  export.go  ldap_server.go  notifications.go  sync.go  usage.go  workspaces.go
backend/middleware/: auth.go  logging.go
frontend/: README.md  index.html  package-lock.json  package.json
frontend-container/: Dockerfile  nginx.conf
public/: admin.html  admin.js  app.js  index.html  login.html
src/: app.js
tests/: api.test.js  directory.test.js  models.test.js
web-tier/: docker-compose.yml
(+79 files in other folders)
